# habits_tracker

./: .env_sample  README.md  coverage_report.html  deploy.sh  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
fixtures/: habits.json  users.json
habits/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time.py  0003_alter_habit_frequency.py  0004_alter_habit_duration.py  0005_alter_habit_duration.py  0006_alter_habit_frequency.py  0007_remove_habit_time.py  0008_habit_time.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
