[tool.poetry]
name = "habits-tracker"
version = "0.1.0"
description = ""
authors = ["Olga Aukhadieva <sarole4ka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2.13,<4.3.0"
ipython = "^8.26.0"
psycopg2 = "^2.9.9"
binary = "^1.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
